--- a/images/icons.svg/icomoon (7)/demo-external-svg.html
+++ b/images/icons.svg/icomoon (7)/demo-external-svg.html
@@ -72,12 +72,17 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
-                <svg class="icon icon-Logo4"><use xlink:href="symbol-defs.svg#icon-Logo4"></use></svg><span class="name"> icon-Logo4</span>
+                <svg class="icon icon-logo4"><use xlink:href="symbol-defs.svg#icon-logo4"></use></svg><span class="name"> icon-logo4</span>
             </div>
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
                 <svg class="icon icon-Logo5"><use xlink:href="symbol-defs.svg#icon-Logo5"></use></svg><span class="name"> icon-Logo5</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-Logo6"><use xlink:href="symbol-defs.svg#icon-Logo6"></use></svg><span class="name"> icon-Logo6</span>
             </div>
         </div>
   </div>
