--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <li class="sect-second__item">
               <div class="advantage">
                 <svg class="icon" width="64" height="64">
-                  <use href="./images/icons.svg/#antenna" ></use>
+                  <use href="./images/icons.svg#icon-antenna" ></use>
                 </svg>
               </div> 
               <h3 class="second-section-title">Strategy</h3>
@@ -96,7 +96,7 @@
 
             <li class="sect-second__item">
               <div class="advantage"><svg class="icon" width="64" height="64">
-                <use href="./images/icons.svg#clock"></use>
+                <use href="./images/icons.svg#icon-clock"></use>
               </svg></div> 
               <h3 class="second-section-title">Punctuality</h3>
               <p class="second-section-text">
@@ -107,7 +107,7 @@
 
             <li class="sect-second__item">
               <div class="advantage"><svg class="icon" width="64" height="64">
-                <use href="./images/icons.svg#diagram" ></use>
+                <use href="./images/icons.svg#icon-diagram" ></use>
               </svg></div>
               <h3 class="second-section-title">Diligence</h3>
               <p class="second-section-text">
@@ -118,7 +118,7 @@
 
             <li class="sect-second__item">
               <div class="advantage"><svg class="icon" width="64" height="64">
-                <use href="./images/icons.svg#astronaut"></use>
+                <use href="./images/icons.svg#icon-astronaut"></use>
               </svg></div>
               <h3 class="second-section-title">Technologies</h3>
                 <p class="second-section-text">
@@ -278,7 +278,7 @@
                         <li class="social-item">
                     <a class="social-link__four" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
               <svg class="social-icon icon-social" width="16" height="16">
-                <use href="./images/icons.svg#twitter"></use>
+                <use href="./images/icons.svg/#twitter"></use>
               </svg>
             </a>
           </li>
@@ -358,7 +358,7 @@
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
                         <svg class="social-icon" width="104" height="56">
-                          <use href="./images/icons.svg#logo1"></use>
+                          <use href="./images/icons.svg#icon-logo1"></use>
                         </svg>
                       </a>
                     </li>
@@ -366,7 +366,7 @@
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
                       <svg class="social-icon" width="104" height="56">
-                      <use href="./images/icons.svg#logo2"></use>
+                      <use href="./images/icons.svg#icon-logo2"></use>
                       </svg>
                       </a>
                     </li>
@@ -374,7 +374,7 @@
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
                       <svg class="social-icon" width="104" height="56">
-                      <use href="./images/icons.svg#logo3"></use>
+                      <use href="./images/icons.svg#icon-logo3"></use>
                       </svg>
                       </a>
                     </li>
@@ -382,7 +382,7 @@
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
                       <svg class="social-icon" width="104" height="56">
-                      <use href="./images/icons.svg#logo4"></use>
+                      <use href="./images/icons.svg#icon-logo4"></use>
                       </svg>
                       </a>
                     </li>
@@ -390,7 +390,7 @@
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
                       <svg class="social-icon" width="104" height="56">
-                      <use href="./images/icons.svg#logo5"></use>
+                      <use href="./images/icons.svg#icon-logo5"></use>
                       </svg>
                       </a>
                     </li>
@@ -398,7 +398,7 @@
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
                       <svg class="social-icon" width="104" height="56">
-                      <use href="./images/icons.svg#logo6"></use>
+                      <use href="./images/icons.svg#icon-logo6"></use>
                       </svg>
                       </a>
                     </li>  
@@ -426,28 +426,28 @@
           <li class="social-item">
             <a class="social-link_footer" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
               <svg class="social-icon__footer" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
+                <use href="./images/icons.svg#instagram"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
              <a class="social-link_footer" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
               <svg class="social-icon__footer" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
+                <use href="./images/icons.svg#twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
              <a class="social-link_footer" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
               <svg class="social-icon__footer" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
+                <use href="./images/icons.svg#facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
              <a class="social-link_footer" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
               <svg class="social-icon__footer" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use>
+                <use href="./images/icons.svg#linkedin"></use>
               </svg>
             </a>
           </li>
