--- a/index.html
+++ b/index.html
@@ -456,6 +456,8 @@
     </div>
         
     </footer>
+    <div class="data-modal">
     <script src="./js/modal.js"></script>
+  </div>
   </body>
 </html>
