--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
     </div>
         
     </footer>
-    <div class="data-modal">
+    <div data-modal class="is-hidden">
     <script src="./js/modal.js"></script>
   </div>
   </body>
