--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <h1 class="main-title hero__title">
             Effective Solutions for Your Business
           </h1>
-          <button class="button-btn" type="button">Order Service</button>
+          <button type="button" class="button-btn" data-modal-open>Order Service</button>
         </div>
       </section>
       <!-- Section 2 -->
@@ -358,7 +358,8 @@
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
                         <svg class="social-icon" width="104" height="56">
-                          <use href="./images/icons.svg#icon-logo1"></use>
+                          <use class="icon-link"
+                          href="./images/icons.svg#icon-logo1"></use>
                         </svg>
                       </a>
                     </li>
