--- a/index.html
+++ b/index.html
@@ -426,28 +426,28 @@
         <ul class="social-list">
           <li class="social-item">
             <a class="social-link_footer" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-              <svg width="24" height="24">
+              <svg class="social-icon__footer" width="24" height="24">
                 <use href="./images/icons.svg#instagram"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
              <a class="social-link_footer" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-              <svg width="24" height="24">
+              <svg class="social-icon__footer" width="24" height="24">
                 <use href="./images/icons.svg#twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
              <a class="social-link_footer" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-              <svg width="24" height="24">
+              <svg class="social-icon__footer" width="24" height="24">
                 <use href="./images/icons.svg#facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
              <a class="social-link_footer" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-              <svg width="24" height="24">
+              <svg class="social-icon__footer" width="24" height="24">
                 <use href="./images/icons.svg#linkedin"></use>
               </svg>
             </a>
