--- a/index.html
+++ b/index.html
@@ -458,7 +458,10 @@
         
     </footer>
     <div data-modal class="is-hidden">
-  </div>
+      <div class="modal-window">
+
+      </div>
+    </div>
   <script src="./js/modal.js"></script>
   </body>
 </html>
