--- a/index.html
+++ b/index.html
@@ -459,7 +459,9 @@
     </footer>
     <div data-modal class="is-hidden">
       <div class="modal-window">
+        <button data-modal-close type="button" class="modal-button">
 
+        </button>
       </div>
     </div>
   <script src="./js/modal.js"></script>
