--- a/portfolio.html
+++ b/portfolio.html
@@ -175,8 +175,8 @@
     </main>
             <!-- Footer -->
     <footer class="footer">
-      <div class="container container__footer">
-        <div>
+      <div class="container">
+        <div class="container-footer">
           <a class="logo-footer__link link logo" href="./index.html"
           >Web<span class="logo-footer">Studio</span>
         </a>
