--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
           </li>
           <li class="social-item">
              <a class="social-link_footer" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-              <svg class="social-icon__footer" width="24" height="24">
+              <svg width="24px" height="24px" class="social-icon__footer">
                 <use href="./images/icons.svg#linkedin"></use>
               </svg>
             </a>
