--- a/index.html
+++ b/index.html
@@ -460,7 +460,7 @@
     <div data-modal class="is-hidden">
       <div class="modal-window">
         <button data-modal-close type="button" class="modal-button">
-          <svg width="8" height="8" class="modal-button-icon">
+          <svg class="modal-button-icon">
             <use href="./images/icons.svg#modalbtn">
 
             </use>
