--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                         <li class="social-item">
                     <a class="social-link__four" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
               <svg class="social-icon icon-social" width="16" height="16">
-                <use href="./images/icons.svg/#twitter"></use>
+                <use href="./images/icons.svg#twitter"></use>
               </svg>
             </a>
           </li>
