--- a/portfolio.html
+++ b/portfolio.html
@@ -192,28 +192,28 @@
           <li class="social-item">
             <a class="social-link_footer" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
               <svg class="social-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
+                <use href="./images/icons.svg#instagram"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
              <a class="social-link_footer" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
               <svg class="social-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
+                <use href="./images/icons.svg#twitter"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
              <a class="social-link_footer" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
               <svg class="social-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
+                <use href="./images/icons.svg#facebook"></use>
               </svg>
             </a>
           </li>
           <li class="social-item">
              <a class="social-link_footer" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
               <svg class="social-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use>
+                <use href="./images/icons.svg#linkedin"></use>
               </svg>
             </a>
           </li>
