--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
           </li>
           <li class="social-item">
              <a class="social-link_footer" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-              <svg width="24px" height="24px" class="social-icon__footer">
+              <svg width="24" height="24" class="social-icon__footer">
                 <use href="./images/icons.svg#linkedin"></use>
               </svg>
             </a>
