--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                    <ul class="customers-list">
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-                        <svg class="social-icon" width="104" height="56">
+                        <svg class="section-social-icon" width="104" height="56">
                           <use class="icon-link"
                           href="./images/icons.svg#icon-logo1"></use>
                         </svg>
@@ -366,7 +366,7 @@
 
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-                      <svg class="social-icon" width="104" height="56">
+                      <svg class="section-social-icon" width="104" height="56">
                       <use href="./images/icons.svg#icon-logo2"></use>
                       </svg>
                       </a>
@@ -374,7 +374,7 @@
 
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-                      <svg class="social-icon" width="104" height="56">
+                      <svg class="section-social-icon" width="104" height="56">
                       <use href="./images/icons.svg#icon-logo3"></use>
                       </svg>
                       </a>
@@ -382,7 +382,7 @@
 
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-                      <svg class="social-icon" width="104" height="56">
+                      <svg class="section-social-icon" width="104" height="56">
                       <use href="./images/icons.svg#icon-logo4"></use>
                       </svg>
                       </a>
@@ -390,7 +390,7 @@
 
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-                      <svg class="social-icon" width="104" height="56">
+                      <svg class="section-social-icon" width="104" height="56">
                       <use href="./images/icons.svg#icon-logo5"></use>
                       </svg>
                       </a>
@@ -398,7 +398,7 @@
 
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-                      <svg class="social-icon" width="104" height="56">
+                      <svg class="section-social-icon" width="104" height="56">
                       <use href="./images/icons.svg#icon-logo6"></use>
                       </svg>
                       </a>
