--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             >Web<span class="logo-header">Studio</span></a
           >
           <ul class="menu list header__menu">
-            <li class="menu-link">
+            <li class="active">
               <a class="link-menu link" href="./index.html">Studio</a>
             </li>
-            <li class="menu-link">
+            <li class="active">
               <a class="link-menu link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="menu-link">
+            <li class="active">
               <a class="link-menu link" href="">Contacts</a>
             </li>
           </ul>
@@ -132,7 +132,7 @@
 
       <!-- Sektion- 3 What are we doing -->
       <section class="section secrion__three">
-        <div class="container container__three">
+        <div class="container">
           <h2 class="section-title title-three">What are we doing</h2>
           <ul class="list container__three_list">
             <li class="third__item">
@@ -165,7 +165,7 @@
       <!-- Section4 Our Team-->
 
       <section class="section-four">
-        <div class="container container-section__four">
+        <div class="container">
             <h2 class="section-title">Our Team</h2>
               <ul class="list conteiner_four__list">
                 <li class="item-four-list">
@@ -357,7 +357,7 @@
                    <ul class="customers-list">
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-                        <svg class="section-social-icon" width="104" height="56">
+                        <svg class="section-social-icons" width="104" height="56">
                           <use class="icon-link"
                           href="./images/icons.svg#icon-logo1"></use>
                         </svg>
@@ -366,40 +366,45 @@
 
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-                      <svg class="section-social-icon" width="104" height="56">
-                      <use href="./images/icons.svg#icon-logo2"></use>
+                      <svg class="section-social-icons" width="104" height="56">
+                      <use class="icon-link"
+                      href="./images/icons.svg#icon-logo2"></use>
                       </svg>
                       </a>
                     </li>
 
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-                      <svg class="section-social-icon" width="104" height="56">
-                      <use href="./images/icons.svg#icon-logo3"></use>
+                      <svg class="section-social-icons" width="104" height="56">
+                      <use class="icon-link"
+                      href="./images/icons.svg#icon-logo3"></use>
                       </svg>
                       </a>
                     </li>
 
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-                      <svg class="section-social-icon" width="104" height="56">
-                      <use href="./images/icons.svg#icon-logo4"></use>
+                      <svg class="section-social-icons" width="104" height="56">
+                      <use class="icon-link"
+                      href="./images/icons.svg#icon-logo4"></use>
                       </svg>
                       </a>
                     </li>
 
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-                      <svg class="section-social-icon" width="104" height="56">
-                      <use href="./images/icons.svg#icon-logo5"></use>
+                      <svg class="section-social-icons" width="104" height="56">
+                      <use class="icon-link"
+                      href="./images/icons.svg#icon-logo5"></use>
                       </svg>
                       </a>
                     </li>
 
                     <li class="customers__item">
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
-                      <svg class="section-social-icon" width="104" height="56">
-                      <use href="./images/icons.svg#icon-logo6"></use>
+                      <svg class="section-social-icons" width="104" height="56">
+                      <use class="icon-link"
+                      href="./images/icons.svg#icon-logo6"></use>
                       </svg>
                       </a>
                     </li>  
