--- a/images/icoons.svg/icomoon (9)/demo-external-svg.html
+++ b/images/icoons.svg/icomoon (9)/demo-external-svg.html
@@ -17,6 +17,11 @@
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
         <div class="glyph fs1">
             <div class="clearfix pbs">
+                <svg class="icon icon-closeBtn"><use xlink:href="symbol-defs.svg#icon-closeBtn"></use></svg><span class="name"> icon-closeBtn</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
                 <svg class="icon icon-antenna-1"><use xlink:href="symbol-defs.svg#icon-antenna-1"></use></svg><span class="name"> icon-antenna-1</span>
             </div>
         </div>
@@ -57,6 +62,16 @@
         </div>
         <div class="glyph fs1">
             <div class="clearfix pbs">
+                <svg class="icon icon-Logo5"><use xlink:href="symbol-defs.svg#icon-Logo5"></use></svg><span class="name"> icon-Logo5</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-Logo4"><use xlink:href="symbol-defs.svg#icon-Logo4"></use></svg><span class="name"> icon-Logo4</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
                 <svg class="icon icon-logo1"><use xlink:href="symbol-defs.svg#icon-logo1"></use></svg><span class="name"> icon-logo1</span>
             </div>
         </div>
@@ -68,16 +83,6 @@
         <div class="glyph fs1">
             <div class="clearfix pbs">
                 <svg class="icon icon-Logo3"><use xlink:href="symbol-defs.svg#icon-Logo3"></use></svg><span class="name"> icon-Logo3</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-logo4"><use xlink:href="symbol-defs.svg#icon-logo4"></use></svg><span class="name"> icon-logo4</span>
-            </div>
-        </div>
-        <div class="glyph fs1">
-            <div class="clearfix pbs">
-                <svg class="icon icon-Logo5"><use xlink:href="symbol-defs.svg#icon-Logo5"></use></svg><span class="name"> icon-Logo5</span>
             </div>
         </div>
         <div class="glyph fs1">
