--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
 
 
             <!-- Section 5 Customers -->
+            
 
             <section class="customers-section">
              <div class="container container-customers ">
@@ -395,7 +396,7 @@
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
                       <svg class="section-social-icons" width="104" height="56">
                       <use class="icon-link"
-                      href="./images/icons.svg#icon-logo5"></use>
+                      href="./images/"></use>
                       </svg>
                       </a>
                     </li>
