--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
                       <a class="customers-link" href="" target="_blank" rel="nooperer no-referrer" aria-label="linl to instagram">
                       <svg class="section-social-icons" width="104" height="56">
                       <use class="icon-link"
-                      href="./images/"></use>
+                      href="./images/icons.svg#icon-logo5"></use>
                       </svg>
                       </a>
                     </li>
