--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@
       <div class="modal-window">
         <button data-modal-close type="button" class="modal-button">
           <svg width="8" height="8" class="modal-button-icon">
-            <use href="./images/icons.svg#modalbtn">
+            <use href="./images/icons.svg#icon-closeBtn">
               
             </use>
           </svg>
