--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
                 
     <footer class="footer">
-      <div class="container container__footer">
+      <div class="container__footer container">
          <div class="logo__container">
           <a class="logo-footer__link link logo" href="./index.html"
           >Web<span class="logo-footer">Studio</span>
