--- a/portfolio.html
+++ b/portfolio.html
@@ -227,8 +227,8 @@
     </main>
             <!-- Footer -->
     <footer class="footer">
-      <div class="container-footer">
-        <div class="container-footer">
+      <div class="container-footer container">
+        <div class="container-footer-wrap">
           <a class="logo-footer__link link logo" href="./index.html"
           >Web<span class="logo-footer">Studio</span>
         </a>
