--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
             >Web<span class="logo-header">Studio</span></a
           >
           <ul class="menu list header__menu">
-            <li class="active">
-              <a class="link-menu link" href="./index.html">Studio</a>
+            <li class="menu-list">
+              <a class="link-menu link active" href="./index.html">Studio</a>
             </li>
-            <li class="active">
+            <li class="menu-list">
               <a class="link-menu link" href="./portfolio.html">Portfolio</a>
             </li>
-            <li class="active">
+            <li class="menu-list">
               <a class="link-menu link" href="">Contacts</a>
             </li>
           </ul>
